@@ -20,25 +20,26 @@ package org.apache.ignite.internal.deployment;
 import static java.util.concurrent.TimeUnit.MILLISECONDS;
 import static java.util.concurrent.TimeUnit.SECONDS;
 import static org.apache.ignite.internal.deployment.DeployFiles.buildStatus;
-import static org.apache.ignite.internal.rest.api.deployment.DeploymentStatus.DEPLOYED;
-import static org.apache.ignite.internal.rest.api.deployment.DeploymentStatus.UPLOADING;
+import static org.apache.ignite.internal.deployunit.DeploymentStatus.DEPLOYED;
+import static org.apache.ignite.internal.deployunit.DeploymentStatus.UPLOADING;
 import static org.apache.ignite.internal.testframework.matchers.CompletableFutureMatcher.willBe;
 import static org.apache.ignite.internal.testframework.matchers.CompletableFutureMatcher.willSucceedFast;
 import static org.awaitility.Awaitility.await;
 import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.empty;
 import static org.hamcrest.Matchers.nullValue;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
 import org.apache.ignite.compute.version.Version;
 import org.apache.ignite.internal.ClusterPerTestIntegrationTest;
 import org.apache.ignite.internal.app.IgniteImpl;
+import org.apache.ignite.internal.deployunit.DeploymentStatus;
 import org.apache.ignite.internal.deployunit.IgniteDeployment;
 import org.apache.ignite.internal.deployunit.InitialDeployMode;
 import org.apache.ignite.internal.deployunit.UnitStatuses;
-import org.apache.ignite.internal.rest.api.deployment.DeploymentStatus;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 
 /**
@@ -56,16 +57,16 @@ public class ItDeploymentUnitTest extends ClusterPerTestIntegrationTest {
     @Test
     public void testDeploy() {
         String id = "test";
-        Unit unit = files.deployAndVerifySmall(id, Version.parseVersion("1.1.0"), cluster.node(1));
+        Unit unit = files.deployAndVerifySmall(id, Version.parseVersion("1.1.0"), node(1));
 
-        IgniteImpl cmg = cluster.node(0);
+        IgniteImpl cmg = node(0);
         unit.waitUnitReplica(cmg);
 
         UnitStatuses status = buildStatus(id, unit);
 
         await().timeout(2, SECONDS)
                 .pollDelay(500, MILLISECONDS)
-                .until(() -> node(2).deployment().clusterStatusesAsync(), willBe(Collections.singletonList(status)));
+                .until(() -> node(2).deployment().clusterStatusesAsync(), willBe(List.of(status)));
     }
 
     @Test
@@ -75,40 +76,40 @@ public class ItDeploymentUnitTest extends ClusterPerTestIntegrationTest {
                 Version.parseVersion("1.1.0"),
                 false,
                 List.of(files.smallFile(), files.mediumFile()),
-                cluster.node(1)
+                node(1)
         );
 
-        IgniteImpl cmg = cluster.node(0);
+        IgniteImpl cmg = node(0);
         unit.waitUnitReplica(cmg);
 
         UnitStatuses status = buildStatus(id, unit);
 
         await().timeout(2, SECONDS)
                 .pollDelay(500, MILLISECONDS)
-                .until(() -> node(2).deployment().clusterStatusesAsync(), willBe(Collections.singletonList(status)));
+                .until(() -> node(2).deployment().clusterStatusesAsync(), willBe(List.of(status)));
     }
 
     @Test
     public void testDeployUndeploy() {
-        Unit unit = files.deployAndVerifySmall("test", Version.parseVersion("1.1.0"), cluster.node(1));
+        Unit unit = files.deployAndVerifySmall("test", Version.parseVersion("1.1.0"), node(1));
 
-        IgniteImpl cmg = cluster.node(0);
+        IgniteImpl cmg = node(0);
         unit.waitUnitReplica(cmg);
 
         unit.undeploy();
         unit.waitUnitClean(cmg);
 
         CompletableFuture<List<UnitStatuses>> list = node(2).deployment().clusterStatusesAsync();
-        assertThat(list, willBe(Collections.emptyList()));
+        assertThat(list, willBe(empty()));
     }
 
     @Test
     public void testDeployTwoUnits() {
         String id = "test";
-        Unit unit1 = files.deployAndVerifySmall(id, Version.parseVersion("1.1.0"), cluster.node(1));
-        Unit unit2 = files.deployAndVerifySmall(id, Version.parseVersion("1.1.1"), cluster.node(2));
+        Unit unit1 = files.deployAndVerifySmall(id, Version.parseVersion("1.1.0"), node(1));
+        Unit unit2 = files.deployAndVerifySmall(id, Version.parseVersion("1.1.1"), node(2));
 
-        IgniteImpl cmg = cluster.node(0);
+        IgniteImpl cmg = node(0);
         unit1.waitUnitReplica(cmg);
         unit2.waitUnitReplica(cmg);
 
@@ -125,10 +126,10 @@ public class ItDeploymentUnitTest extends ClusterPerTestIntegrationTest {
     @Test
     public void testDeployTwoUnitsAndUndeployOne() {
         String id = "test";
-        Unit unit1 = files.deployAndVerifySmall(id, Version.parseVersion("1.1.0"), cluster.node(1));
-        Unit unit2 = files.deployAndVerifySmall(id, Version.parseVersion("1.1.1"), cluster.node(2));
+        Unit unit1 = files.deployAndVerifySmall(id, Version.parseVersion("1.1.0"), node(1));
+        Unit unit2 = files.deployAndVerifySmall(id, Version.parseVersion("1.1.1"), node(2));
 
-        IgniteImpl cmg = cluster.node(0);
+        IgniteImpl cmg = node(0);
         unit1.waitUnitReplica(cmg);
         unit2.waitUnitReplica(cmg);
 
@@ -147,12 +148,12 @@ public class ItDeploymentUnitTest extends ClusterPerTestIntegrationTest {
     public void testDeploymentStatus() {
         String id = "test";
         Version version = Version.parseVersion("1.1.0");
-        Unit unit = files.deployAndVerifyMedium(id, version, cluster.node(1));
+        Unit unit = files.deployAndVerifyMedium(id, version, node(1));
 
         CompletableFuture<DeploymentStatus> status = node(2).deployment().clusterStatusAsync(id, version);
         assertThat(status, willBe(UPLOADING));
 
-        IgniteImpl cmg = cluster.node(0);
+        IgniteImpl cmg = node(0);
         unit.waitUnitReplica(cmg);
 
         await().timeout(2, SECONDS)
@@ -167,16 +168,17 @@ public class ItDeploymentUnitTest extends ClusterPerTestIntegrationTest {
         assertThat(node(2).deployment().clusterStatusAsync(id, version), willBe(nullValue()));
     }
 
+    @Disabled("https://issues.apache.org/jira/browse/IGNITE-19757")
     @Test
     public void testRedeploy() {
         String id = "test";
         String version = "1.1.0";
-        Unit smallUnit = files.deployAndVerifySmall(id, Version.parseVersion(version), cluster.node(1));
+        Unit smallUnit = files.deployAndVerifySmall(id, Version.parseVersion(version), node(1));
 
-        IgniteImpl cmg = cluster.node(0);
+        IgniteImpl cmg = node(0);
         smallUnit.waitUnitReplica(cmg);
 
-        Unit mediumUnit = files.deployAndVerify(id, Version.parseVersion(version), true, List.of(files.mediumFile()), cluster.node(1));
+        Unit mediumUnit = files.deployAndVerify(id, Version.parseVersion(version), true, List.of(files.mediumFile()), node(1));
         mediumUnit.waitUnitReplica(cmg);
 
         smallUnit.waitUnitClean(smallUnit.deployedNode());
@@ -187,12 +189,12 @@ public class ItDeploymentUnitTest extends ClusterPerTestIntegrationTest {
     public void testOnDemandDeploy() {
         String id = "test";
         Version version = Version.parseVersion("1.1.0");
-        Unit smallUnit = files.deployAndVerifySmall(id, version, cluster.node(1));
+        Unit smallUnit = files.deployAndVerifySmall(id, version, node(1));
 
-        IgniteImpl cmg = cluster.node(0);
+        IgniteImpl cmg = node(0);
         smallUnit.waitUnitReplica(cmg);
 
-        IgniteImpl onDemandDeployNode = cluster.node(2);
+        IgniteImpl onDemandDeployNode = node(2);
         CompletableFuture<Boolean> onDemandDeploy = onDemandDeployNode.deployment().onDemandDeploy(id, version);
 
         assertThat(onDemandDeploy, willBe(true));
@@ -203,12 +205,12 @@ public class ItDeploymentUnitTest extends ClusterPerTestIntegrationTest {
     public void testOnDemandDeployToDeployedNode() {
         String id = "test";
         Version version = Version.parseVersion("1.1.0");
-        Unit smallUnit = files.deployAndVerifySmall(id, version, cluster.node(1));
+        Unit smallUnit = files.deployAndVerifySmall(id, version, node(1));
 
-        IgniteImpl cmg = cluster.node(0);
+        IgniteImpl cmg = node(0);
         smallUnit.waitUnitReplica(cmg);
 
-        IgniteImpl onDemandDeployNode = cluster.node(1);
+        IgniteImpl onDemandDeployNode = node(1);
         CompletableFuture<Boolean> onDemandDeploy = onDemandDeployNode.deployment().onDemandDeploy(id, version);
 
         assertThat(onDemandDeploy, willBe(true));
@@ -218,39 +220,30 @@ public class ItDeploymentUnitTest extends ClusterPerTestIntegrationTest {
     @Test
     public void testDeployToCmg() {
         String id = "test";
-        Version version = Version.parseVersion("1.1.0");
-        Unit smallUnit = files.deployAndVerifySmall(id, version, cluster.node(0));
+        Unit smallUnit = files.deployAndVerifySmall(id, Version.parseVersion("1.1.0"), node(0));
 
-        await().untilAsserted(() -> {
-            CompletableFuture<List<UnitStatuses>> list = node(0).deployment().clusterStatusesAsync();
-            assertThat(list, willBe(List.of(UnitStatuses.builder(id).append(version, DEPLOYED).build())));
-        });
+        await().until(() -> node(0).deployment().clusterStatusesAsync(id), willBe(buildStatus(id, smallUnit)));
     }
 
     @Test
     public void testDeployToSpecificNode() {
         String id = "test";
-        Version version = Version.parseVersion("1.1.0");
         Unit smallUnit = files.deployAndVerify(
-                id, version, false, List.of(files.smallFile()),
+                id, Version.parseVersion("1.1.0"), false, List.of(files.smallFile()),
                 null, List.of(node(1).name()),
                 node(0)
         );
 
         smallUnit.waitUnitReplica(node(1));
 
-        await().untilAsserted(() -> {
-            CompletableFuture<List<UnitStatuses>> list = node(0).deployment().clusterStatusesAsync();
-            assertThat(list, willBe(List.of(UnitStatuses.builder(id).append(version, DEPLOYED).build())));
-        });
+        await().until(() -> node(0).deployment().clusterStatusesAsync(id), willBe(buildStatus(id, smallUnit)));
     }
 
     @Test
     public void testDeployToAll() {
         String id = "test";
-        Version version = Version.parseVersion("1.1.0");
         Unit smallUnit = files.deployAndVerify(
-                id, version, false, List.of(files.smallFile()),
+                id, Version.parseVersion("1.1.0"), false, List.of(files.smallFile()),
                 InitialDeployMode.ALL, List.of(),
                 node(0)
         );
@@ -258,9 +251,6 @@ public class ItDeploymentUnitTest extends ClusterPerTestIntegrationTest {
         smallUnit.waitUnitReplica(node(1));
         smallUnit.waitUnitReplica(node(2));
 
-        await().untilAsserted(() -> {
-            CompletableFuture<List<UnitStatuses>> list = node(0).deployment().clusterStatusesAsync();
-            assertThat(list, willBe(List.of(UnitStatuses.builder(id).append(version, DEPLOYED).build())));
-        });
+        await().until(() -> node(0).deployment().clusterStatusesAsync(id), willBe(buildStatus(id, smallUnit)));
     }
 }
